# tgrs

./: .gitignore  Cargo.toml  readme.md  rustfmt.toml  tg.sublime-project  tg.sublime-workspace
custom_debug_derive/: Cargo.toml  lib.rs
emitter/: Cargo.toml  indent.rs  main.rs  source.html
tg/: Cargo.toml  addons.rs  bare.rs  client.rs  custom.rs  lib.rs  output.rs  reqwest.rs  schema.rs  serializer.rs  test.rs
tg-bot-api/src/: lib.rs
tg/client/: _serializer.rs  form.rs  mod.rs  serializer.rs
tg/custom/: command.rs  message.rs  mod.rs  raw.rs
tg/custom/text/: entities.rs  mod.rs
tg/serializer/: mod.rs  possible.rs
