[package]
name = "tg-emitter"
edition = "2024"

[[bin]]
name = "tg-emitter"
path = "main.rs"

[dependencies]
tg-bot-api = { path = "../tg-bot-api" }
anyhow = "1.0"
heck = "0.5"
# quote = "1.0.38"
# proc-macro2 = { version = "1.0.93", features = ["nightly"] }
# indoc = "2.0.5"
# prettyplease = "0.2.29"
# syn = "2.0.96"
# rustfmt = { version = "0.9", default-features = false }
pluralizer = { version = "0.5" }
