[package]
name = "tg"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
derive_more = { version = "1", features = ["from", "display"] }
serde = { version = "1", features = ["alloc", "derive"] }
serde_with = { version = "3" }
serde_json = { version = "1" }
itoa = { version = "1" }
ryu = { version = "1" }
bytes = { version = "1", default-features = false, features = ["std"] }
fastrand = { version = "2.3" }
futures-util = { version = "0.3", default-features = false, features = ["io"] }
# bincode = { version = "2", optional = true }

[features]
default = []
# custom-message = []
serde-all = []
# bincode = ["dep:bincode"]
# stream-file = ["dep:tokio", "dep:tokio-util"]